[gd_scene load_steps=17 format=3 uid="uid://bnmmmvm8ghnjp"]

[ext_resource type="Script" path="res://Scripts/Player/heart.gd" id="1_ukayt"]
[ext_resource type="Shader" path="res://Resources/Shaders/heart_color.gdshader" id="2_wivxd"]
[ext_resource type="Texture2D" uid="uid://bjpbw1ch2fmuo" path="res://Sprites/Player/battle/Player Soul.png" id="3_iig1m"]
[ext_resource type="Texture2D" uid="uid://dn4njf8kgjcx7" path="res://Sprites/Player/battle/Shield-2.png" id="4_iqlmi"]
[ext_resource type="Script" path="res://Scripts/Player/Shields.gd" id="4_jvw0f"]
[ext_resource type="Texture2D" uid="uid://c8gp14viko0nx" path="res://Sprites/Player/battle/Shield2-2.png" id="5_ple58"]
[ext_resource type="Texture2D" uid="uid://duhato4ei03r6" path="res://Sprites/Player/battle/Shield-1.png" id="5_vqk3a"]
[ext_resource type="Texture2D" uid="uid://d4djs0b50racq" path="res://Sprites/Player/battle/Shield2-1.png" id="6_3yo4y"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ps30"]
resource_local_to_scene = true
shader = ExtResource("2_wivxd")
shader_parameter/type = 0
shader_parameter/inv_frames = false
shader_parameter/hole = false

[sub_resource type="SpriteFrames" id="SpriteFrames_h6nd8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_iig1m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuvff"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_habgu"]
radius = 5.0

[sub_resource type="SpriteFrames" id="SpriteFrames_10c8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_iqlmi")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vqk3a")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7sftv"]
size = Vector2(4, 60)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7n0oa"]
a = Vector2(-10, -14)
b = Vector2(0, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_f4po8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ple58")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_3yo4y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="heart" type="CharacterBody2D"]
script = ExtResource("1_ukayt")
jump_height = 60.0
jump_time_to_peak = 0.4
jump_time_to_descent = 0.8

[node name="Sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7ps30")
sprite_frames = SubResource("SpriteFrames_h6nd8")

[node name="in" type="Sprite2D" parent="Sprite"]
modulate = Color(0, 0, 0, 1)
position = Vector2(5.06639e-07, 0.2)
scale = Vector2(0.75, 0.725)
texture = ExtResource("3_iig1m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_kuvff")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_habgu")

[node name="Shields" type="Node2D" parent="."]
visible = false
script = ExtResource("4_jvw0f")

[node name="ShieldBlue" type="AnimatedSprite2D" parent="Shields"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_10c8e")
animation = &"idle"
centered = false
offset = Vector2(-30, -32)
metadata/angle = 0.0

[node name="HitBox" type="Area2D" parent="Shields/ShieldBlue"]
visible = false
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shields/ShieldBlue/HitBox"]
position = Vector2(-30, 1.31134e-06)
shape = SubResource("RectangleShape2D_7sftv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Shields/ShieldBlue/HitBox"]
position = Vector2(-18, -12)
shape = SubResource("SegmentShape2D_7n0oa")

[node name="ShieldRed" type="AnimatedSprite2D" parent="Shields"]
sprite_frames = SubResource("SpriteFrames_f4po8")
animation = &"idle"
offset = Vector2(0, -24)
metadata/angle = 0.0

[node name="HitBox" type="Area2D" parent="Shields/ShieldRed"]
visible = false
z_index = 1
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shields/ShieldRed/HitBox"]
position = Vector2(-30, 1.31134e-06)
shape = SubResource("RectangleShape2D_7sftv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Shields/ShieldRed/HitBox"]
position = Vector2(-18, -12)
shape = SubResource("SegmentShape2D_7n0oa")
